--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-slick": "^0.30.2",
     "route": "^0.2.5",
     "slick-carousel": "^1.8.1",
-    "switch": "^0.0.0"
+    "switch": "^0.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
